namespace Environment
{
	public interface RealSensor
    {
        
    }
}