namespace Robot
{
	public interface IToioCommand
	{
		public void Execute(Toio toio);
	}
}